[package]
edition = "2021"
name = "esp32-sdcard"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "esp32-sdcard"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32", "unstable"] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.9.0", features = ["esp32"] }
static_cell = "2.1.1"
embedded-hal-bus = "0.3.0"
embedded-sdmmc = "0.9.0"
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
itoa = "1.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
